--- a/src/config.yml
+++ b/src/config.yml
@@ -1,7 +1,7 @@
-#########################################################################
-# CustomPing by MrCote33 - Configuration file
-# Please check for updates, and remember to update the config if needed!
-#########################################################################
+##########################################################################
+#               MicroPing by MrCote33 - Configuration file               #
+# Please check for updates, and remember to update the config if needed! #
+##########################################################################
 
 # Section related to the per command permission system.
 permission-system:
@@ -14,6 +14,8 @@ permission-system:
 tablist:
   # Set this to true if you want to show player's ping in the tablist with the prefix.
   enabled: true
+  # Set this to true if you want show all player's ping with the same size in the tablist.
+  justify: false
   # Customize the tablist prefix, use %ping% to indicate player's latency. You do not need to put a space at the end.
   prefix: "&7[&a%ping%ms&7]&f"
   # Update delay time (in seconds) - 1 means that the tablist is updated every 1 seconds.
