--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ bin/xyz/mrcote33/ping/commands/PingReloadCommand.class
 bin/xyz/mrcote33/ping/MicroPing.class
 bin/xyz/mrcote33/ping/tablist/PingTabList.class
 bin/xyz/mrcote33/ping/utils/PingUtil.class
+/bin/
